--- a/paper/acknowledgments.tex
+++ b/paper/acknowledgments.tex
@@ -6,7 +6,7 @@ Completing this thesis would not have been possible without the help and support
 
 \noindent First of all I want to thank prof. dr. Bruno Volckaert and prof. dr. ir. Filip De Turck for allowing me to propose my own subject and for their prompt and clear responses to every question I have asked. I especially want to thank you for giving me the permission to insert a two-week hiatus during the Easter break, so I could help out on the UGent Dodona project.\\
 
-\noindent Secondly I want to express my gratitude towards both of my counsellors, Jasper Vaneessen and Dwight Kerkhove, for their overall guidance, availability, and to steer me into researching this topic in the first place.\\
+\noindent Secondly I want to express my gratitude towards both of my supervisors, Jasper Vaneessen and Dwight Kerkhove, for their overall guidance, availability, and to steer me into researching this topic in the first place.\\
 
 \noindent Furthermore I want to thank my parents, my brother Stijn and my family for convincing me and giving me the possibility to study at the university, to support me throughout my entire academic career and to provide me the opportunity to pursue my childhood dreams.\\
 
