--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -9,3 +9,6 @@
 
 - Machine Learning en Lineair programmeren als metapredictor?
 
+- Hou rekening met wat er gebeurt als tests zelf worden aangepast -> beschouw dit ook als een change in de gecoverde code
+
+- Niet zeker wat er gebeurt met additions (ipv modifications/deletions) aan source code lines.
