--- a/paper/related-work/adoption/gradle-junit.tex
+++ b/paper/related-work/adoption/gradle-junit.tex
@@ -14,12 +14,12 @@ Gradle\footnote{\url{https://gradle.org}} is a dependency manager and applicatio
 	\centering
 	\begin{minipage}{.45\textwidth}
 		\centering
-		\includegraphics[width=0.8\textwidth]{assets/gradle.pdf}
+		\includegraphics[width=0.8\textwidth]{assets/images/gradle.pdf}
 		\caption{Logo of Gradle}
 	\end{minipage}
 	\begin{minipage}{.45\textwidth}
 		\centering
-		\includegraphics[width=0.6\textwidth]{assets/junit.pdf}
+		\includegraphics[width=0.6\textwidth]{assets/images/junit.pdf}
 		\caption{Logo of JUnit 5}
 	\end{minipage}
 \end{figure}
