--- a/paper/related-work/adoption/openclover.tex
+++ b/paper/related-work/adoption/openclover.tex
@@ -5,6 +5,6 @@ OpenClover\footnote{\url{https://openclover.org}} is a code coverage framework f
 
 \begin{figure}[htbp!]
 	\centering
-	\includegraphics[width=0.40\textwidth]{assets/clover.pdf}
+	\includegraphics[width=0.40\textwidth]{assets/images/clover.pdf}
 	\caption{Logo of Atlassian Clover}
 \end{figure}
