--- a/paper/software-engineering/agile-software-development/continuous-integration.tex
+++ b/paper/software-engineering/agile-software-development/continuous-integration.tex
@@ -17,7 +17,7 @@ In traditional software development, the design phase typically leads to a repre
 
 \begin{figure}[htbp!]
 	\centering
-	\includegraphics[width=0.45\textwidth]{assets/ci-lifecycle.pdf}
+	\includegraphics[width=0.45\textwidth]{assets/images/ci-lifecycle.pdf}
 	\caption{Development Life Cycle with \CI{}}
 	\label{fig:agile-ci-lifecycle}
 \end{figure}
