--- a/paper/software-engineering/agile-software-development/continuous-integration/github-actions.tex
+++ b/paper/software-engineering/agile-software-development/continuous-integration/github-actions.tex
@@ -5,7 +5,7 @@ Following the successful beta of GitHub Actions which had started in August 2019
 
 \begin{figure}[htbp!]
 	\centering
-	\includegraphics[width=0.5\textwidth]{assets/github-actions.pdf}
+	\includegraphics[width=0.5\textwidth]{assets/images/github-actions.pdf}
 	\caption{Logo of GitHub Actions (\url{https://github.com/features/actions})}
 	\label{fig:github-actions}
 \end{figure}
