--- a/paper/software-engineering/agile-software-development/continuous-integration/gitlab-ci.tex
+++ b/paper/software-engineering/agile-software-development/continuous-integration/gitlab-ci.tex
@@ -5,7 +5,7 @@ GitLab, the main competitor of GitHub, announced its own \CI{} service in late 2
 
 \begin{figure}[htbp!]
 	\centering
-	\includegraphics[width=0.40\textwidth]{assets/gitlab.pdf}
+	\includegraphics[width=0.40\textwidth]{assets/images/gitlab.pdf}
 	\caption{Logo of GitLab CI (\url{https://gitlab.com/})}
 	\label{fig:gitlab-ci}
 \end{figure}
