--- a/paper/software-engineering/agile-software-development/continuous-integration/jenkins.tex
+++ b/paper/software-engineering/agile-software-development/continuous-integration/jenkins.tex
@@ -5,7 +5,7 @@ Jenkins CI\footnote{\url{https://jenkins.io/}} was started as a hobby project in
 
 \begin{figure}[htbp!]
 	\centering
-	\includegraphics[width=0.45\textwidth]{assets/jenkins.pdf}
+	\includegraphics[width=0.45\textwidth]{assets/images/jenkins.pdf}
 	\caption{Logo of Jenkins CI (\url{https://jenkins.io/})}
 	\label{fig:jenkins}
 \end{figure}
