--- a/paper/software-engineering/agile-software-development/continuous-integration/travis-ci.tex
+++ b/paper/software-engineering/agile-software-development/continuous-integration/travis-ci.tex
@@ -5,7 +5,7 @@ The final Continuous Integration platform which I will discuss is Travis CI. Thi
 
 \begin{figure}[htbp!]
 	\centering
-	\includegraphics[width=0.40\textwidth]{assets/travis-ci.pdf}
+	\includegraphics[width=0.40\textwidth]{assets/images/travis-ci.pdf}
 	\caption{Logo of Travis CI (\url{https://travis-ci.com/})}
 	\label{fig:travis-ci}
 \end{figure}
