--- a/paper/software-engineering/sdlc.tex
+++ b/paper/software-engineering/sdlc.tex
@@ -18,7 +18,7 @@ An implementation of the SDLC consists of two major components. First, the proce
 
 \begin{figure}[htbp!]
 	\centering
-	\includegraphics[width=\textwidth]{assets/sdlc.pdf}
+	\includegraphics[width=\textwidth]{assets/images/sdlc.pdf}
 	\caption{Improved Waterfall model by Royce}
 	\label{fig:waterfall-royce}
 \end{figure}
