--- a/paper/software-engineering/sdlc/tsa.tex
+++ b/paper/software-engineering/sdlc/tsa.tex
@@ -37,7 +37,7 @@ Whereas code coverage can be used to identify whether or not a part of the code 
 
 \begin{figure}[htbp!]
 	\centering
-	\includegraphics[width=\textwidth]{assets/mutation-testing.pdf}
+	\includegraphics[width=\textwidth]{assets/images/mutation-testing.pdf}
 	\caption{Process of Mutation Testing (based on \cite{Offutt2001})}
 	\label{fig:mutation-testing}
 \end{figure}
@@ -52,15 +52,15 @@ Whereas code coverage can be used to identify whether or not a part of the code 
 \begin{figure}[htbp!]
 	\centering
 	\subfloat[JaCoCo coverage report of \url{https://github.com/thepieterdc/dodona-api-java}]{%
-		\includegraphics[clip,width=\textwidth]{assets/coverage-jacoco.pdf}
+		\includegraphics[clip,width=\textwidth]{assets/images/coverage-jacoco.pdf}
 	}
 	\newline
 	\subfloat[coverage.py report of \url{https://github.com/codecov/example-python}]{%
-		\includegraphics[clip,width=\textwidth]{assets/coverage-coveragepy.pdf}
+		\includegraphics[clip,width=\textwidth]{assets/images/coverage-coveragepy.pdf}
 	}
 	\newline
 	\subfloat[simplecov report of \url{https://github.com/dodona-edu/dodona}]{%
-		\includegraphics[clip,width=\textwidth]{assets/coverage-simplecov.pdf}
+		\includegraphics[clip,width=\textwidth]{assets/images/coverage-simplecov.pdf}
 	}
 	\caption{Statistics from Code coverage tools}
 	\label{fig:coverage-statistics}
