--- a/.latex-common/preamble.tex
+++ b/.latex-common/preamble.tex
@@ -31,6 +31,9 @@
 % Custom colors
 \definecolor{code-background}{HTML}{EEEEEE}
 \definecolor{code-delim}{RGB}{20,105,176}
+\definecolor{darkgray}{rgb}{.4,.4,.4}
+\definecolor{groovyblue}{HTML}{0000A0}
+\definecolor{groovygreen}{HTML}{008000}
 \colorlet{code-punct}{red!60!black}
 
 % Custom English translations.
@@ -39,6 +42,24 @@
 }
 
 % Configuration for code listings.
+\lstdefinelanguage{Groovy}[]{Java}{
+	basicstyle=\normalfont\ttfamily,
+	numbers=left,
+	numberstyle=\scriptsize,
+	stepnumber=1,
+	numbersep=8pt,
+	showstringspaces=false,
+	breaklines=true,
+	frame=lines,
+	backgroundcolor=\color{code-background},
+	keywordstyle=\color{groovyblue}\bfseries,
+	stringstyle=\color{groovygreen}\ttfamily,
+	keywords=[3]{each, findAll, groupBy, collect, inject, eachWithIndex},
+	morekeywords={def, as, in, use},
+	moredelim=[is][\textcolor{darkgray}]{\%\%}{\%\%},
+	moredelim=[il][\textcolor{darkgray}]{§§}
+}
+
 \lstdefinelanguage{json}{
 	basicstyle=\normalfont\ttfamily,
 	numbers=left,
