--- a/paper/related-work/algorithms/hgs.tex
+++ b/paper/related-work/algorithms/hgs.tex
@@ -1,6 +1,6 @@
 % !TeX root = ../../thesis.tex
 
-\subsection{HGS}
+\subsection{HGS}\label{ssec:alg-hgs}
 The second algorithm was created by Harrold, Gupta and Soffa \cite{hgs}. This algorithm constructs the minimal hitting set of the test suite in an iterative fashion. As opposed to the greedy algorithm (\autoref{ssec:alg-greedy}), the HGS algorithm considers the test groups $CT$ instead of the set $TLt$ to obtain a list of test cases that cover all source code lines. More specifically, this algorithm considers the distinct test groups, denoted as $CTD$. Two test groups are considered indistinct if they differ in at least one test case. The pseudocode for this algorithm is provided in Algorithm \autoref{alg:hgs}.\\
 
 \noindent Similar to the previous algorithm, an empty representative set $RS$ is constructed in which the selected test cases will be stored. The algorithm begins by iterating over every source code line $l \in C$ and constructing the corresponding set of test groups $CT_l$. As mentioned before, for performance reasons this set is reduced to $CTD$, only retaining distinct test groups. Next, the algorithm selects every test group of which the cardinality is equal to 1 and adds these to $RS$. This corresponds to every test case that covers a line of code, which is exclusively covered by that single test case. Subsequently, the lines that are covered by any of the selected test cases are removed from $C$. This process is repeated for an incremented cardinality, until every line in $C$ is covered. Since the remaining test groups will now contain more than one test case, the algorithm needs to make a choice on which test case to select. The authors have chosen that the test case that occurs in the most test groups is preferred. In the event of a tie, this choice is deferred until the next iteration.\\
