--- a/.latex-common/preamble.tex
+++ b/.latex-common/preamble.tex
@@ -19,6 +19,7 @@
 \usepackage[default,scale=0.95]{opensans}
 \usepackage{scrlayer}
 \usepackage{setspace}
+\usepackage[detect-weight=true, binary-units=true]{siunitx}
 \usepackage[caption=false]{subfig}
 \usepackage{titlesec}
 \usepackage{xcolor}
