--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -3,3 +3,10 @@
 
 - economische impact (minder tijdverlies)
 - ecologische impact (minder elektriciteit)
+
+\section{Research questions}
+- Hoeveel \% van de uitgevoerde test runs faalt?
+
+- Hoelang duurt een gemiddelde test run?
+
+- Voor elk project, hoe effectief is het gebruiken van TCP?
