--- a/paper/references.bib
+++ b/paper/references.bib
@@ -461,3 +461,11 @@
 	publisher = {W. H. Freeman \& Co.},
 	address = {USA}
 }
+
+@inproceedings{msr17challenge,
+	title={TravisTorrent: Synthesizing Travis CI and GitHub for Full-Stack Research on Continuous Integration},
+	author={Beller, Moritz and Gousios, Georgios and Zaidman, Andy},
+	booktitle={Proceedings of the 14th working conference on mining software repositories},
+	preprint={http://www.st.ewi.tudelft.nl/~mbeller/publications/2017_beller_gousios_zaidman_travistorrent_synthesizing_travis_ci_and_github_for_full-stack_research_on_continuous_integration.pdf},
+	year={2017}
+}
