--- a/paper/related-work/algorithms.tex
+++ b/paper/related-work/algorithms.tex
@@ -2,7 +2,7 @@
 
 \section{Algorithms}
 \label{sec:relatedwork-algorithms}
-In \autoref{ssec:tsm} the relation was explained between applying Test Suite Minimisation and finding the minimal hitting set of the test suite and the set of requirements, which is an NP-complete problem. Therefore, the use of \emph{heuristics} is required. A heuristic is an experience-based method that can be used to solve a hard to compute problem by finding a fast approximation \cite{6588537}. However, the found solution will mostly be suboptimal or might sometimes even fail to find any solution at all. Considering its relation to the minimal hitting set problem, heuristics that are known to literature for solving this problem can also be used to implement \tsm{}. A selection of these heuristics will be discussed below. It should be noted however that the used terminology and naming of the variables might have been changed to ensure mutual consistency. Every algorithm has been modified to adhere to the conventions provided in \autoref{def:alg-naming} and \autoref{def:cardinality}.
+In \autoref{ssec:tsm} the relation was explained between applying Test Suite Minimisation and finding the minimal hitting set of the test suite and the set of requirements, which is an NP-complete problem. Therefore, the use of \emph{heuristics} is required. A heuristic is an experience-based method that can be used to solve a hard to compute problem by finding a fast approximation \cite{6588537}. However, the found solution will mostly be suboptimal or might sometimes even fail to find any solution at all. Considering its relation to the minimal hitting set problem, heuristics that are known to literature for solving this problem can also be used to implement \tsm{}. A selection of these heuristics will be discussed below. It should be noted however that the used terminology and naming of the variables might have been changed to ensure mutual consistency. Every algorithm has been adapted to adhere to the conventions provided in \autoref{def:alg-naming} and \autoref{def:cardinality}.
 
 \begin{definition}[Naming convention]
 \label{def:alg-naming}
