--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -11,6 +11,7 @@
 % Macro's
 \newcommand{\CI}{Continuous Integration}
 \newcommand{\junit}{JUnit}
+\newcommand{\travisci}{Travis CI}
 \newcommand{\tsm}{Test Suite Minimisation}
 \newcommand{\tcp}{Test Case Prioritisation}
 \newcommand{\tcs}{Test Case Selection}
@@ -33,8 +34,8 @@
 \newpage
 \input{velocity.tex}
 \newpage
-\input{other-ways.tex}
-\newpage
+%\input{other-ways.tex}
+%\newpage
 \input{evaluation.tex}
 \newpage
 \input{conclusion.tex}
